# ghost_post

./: db.sqlite3  manage.py  pyproject.toml
ghost_post/: asgi.py  settings.py  urls.py  wsgi.py
ghost_post_app/: admin.py  apps.py  forms.py  models.py  views.py
ghost_post_app/migrations/: 0001_initial.py  0002_posts_total_votes.py
templates/: boast.html  index.html  post_form.html  roast.html
