[tool.poetry]
name = "ghost_post"
version = "0.1.0"
description = "Post your boasts and roasts"
authors = ["Jessica Benson <pokeyjess72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
